--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1>НЮХАЙ БЭБРУ</h1>
-	<img src="bebra/8YAAAgCPvuA-1920.jpg" width="400" height="225">
+	<img src="img/8YAAAgCPvuA-1920.jpg" width="400" height="225">
 
 </body>
 </html>
